Change card color

--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -43,10 +43,10 @@
   background: linear-gradient(
     90deg,
     transparent,
-    #ff9966,
-    #ff9966,
-    #ff9966,
-    #ff9966,
+    #ffc506,
+    #ffc506,
+    #ffc506,
+    #ffc506,
     transparent
   );
   animation: rotation_481 5000ms infinite linear;
